--- a/framework/kernel/config/config.yml
+++ b/framework/kernel/config/config.yml
@@ -21,3 +21,12 @@ database:
       port: 
       protocol: 
       motor: 
+
+# Configuración del sitio
+build:
+  production: false
+  name: Framework
+  url: https://psistemas.ufpso.edu.co/pcontroli/
+  controller_ini: home
+  timezone: America/Bogota
+  domain: ufpso.edu.co
