--- a/framework/kernel/config/config.yml
+++ b/framework/kernel/config/config.yml
@@ -40,3 +40,12 @@ user_cookie:
     lifetime: 7200
     domain: 
     
+
+# Configuración de twig
+twig:
+  cache: false
+  compiled_dir: ./app/templates/.compiled/
+  charset: UTF-8
+  strict_variables: false
+  autoescape: html
+  
